Almost finished Country insertion in admin module; fixed copyright notices in jsp and html files

--- a/natrank-backend/src/main/webapp/resources/css/main.css
+++ b/natrank-backend/src/main/webapp/resources/css/main.css
@@ -69,6 +69,7 @@ form {
 
 h3 {
     margin-top: 0;
+    margin-bottom: 15px;
     padding-bottom: 5px;
     border-bottom: 1px solid #AAAAAA;
     width: 600px;
