Added rudimentary Rating display

--- a/natrank-frontend/app.less
+++ b/natrank-frontend/app.less
@@ -17,6 +17,7 @@
 
 /* Component LESS */
 @import "partial/results/results.less";
+@import "partial/rankings/rankings.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
