--- a/natrank-frontend/partial/results/results.html
+++ b/natrank-frontend/partial/results/results.html
@@ -10,7 +10,7 @@
   ~ Authored by: Piotr Grabowski <fau999@gmail.com>
   -->
 
-<div id="results-container">
+<div id="results-container" data-ng-controller="ResultsCtrl">
   <ul id="results">
     <li class="result" data-ng-repeat="result in results">
       <div class="main-data">
