Added dynamic ranking generation for a given fate

--- a/natrank-frontend/partial/rankings/rankings.html
+++ b/natrank-frontend/partial/rankings/rankings.html
@@ -33,8 +33,8 @@
           {{entry.rank > 0 ? entry.rank : '*'}}
         </td>
         <td>
-          <img src="img/flags/{{entry.teamCountryFlag.code}}.png" class="flag" />
-           {{entry.teamCountry.name}}
+          <img src="img/flags/{{entry.teamInfo.flag.code}}.png" class="flag" />
+           {{entry.teamInfo.name}}
         </td>
         <td>
           {{entry.rating > 0 ? entry.rating : '—'}}
