--- a/natrank-frontend/partial/results/results.html
+++ b/natrank-frontend/partial/results/results.html
@@ -16,7 +16,7 @@
     <li class="result" data-ng-repeat="result in resultsPage.content">
       <div class="main-data">
         <div class="team1-name" data-ng-class="{'winner': result.team1.id == result.winnerTeam.id}">
-          <img src="img/flags/{{result.team1CountryFlag.code}}.png" class="flag" /> {{result.team1Country.name}}
+          <img src="img/flags/{{result.team1Info.flag.code}}.png" class="flag" /> {{result.team1Info.name}}
         </div>
         <div class="team1-rating rating">
           {{result.team1Rating.value}}
@@ -36,7 +36,7 @@
           {{result.team2Rating.value}}
         </div>
         <div class="team2-name" data-ng-class="{'winner': result.team2.id == result.winnerTeam.id}">
-          {{result.team2Country.name}} <img src="img/flags/{{result.team2CountryFlag.code}}.png" class="flag" />
+          {{result.team2Info.name}} <img src="img/flags/{{result.team2Info.flag.code}}.png" class="flag" />
         </div>
       </div>
       <div class="additional-data">
