--- a/natrank-frontend/partial/results/results.html
+++ b/natrank-frontend/partial/results/results.html
@@ -15,33 +15,37 @@
   <ul id="results">
     <li class="result" data-ng-repeat="result in resultsPage.content">
       <div class="main-data">
-        <div class="team1-name" data-ng-class="{'winner': result.team1.id == result.winnerTeam.id}">
-          <img src="img/flags/{{result.team1Info.flag.code}}.png" class="flag" /> {{result.team1Info.name}}
+        <div class="team1-info">
+          <span class="rank" data-ng-class="{'up': result.team1RankChange > 0, 'down': result.team1RankChange < 0}">{{result.team1Rank ? result.team1Rank : '–'}}</span>
+          <img src="img/flags/{{result.team1Info.flag.code}}.png" class="flag" />
+          <span class="name" data-ng-class="{'winner': result.team1Info.team.id == result.winnerTeam.id}">{{result.team1Info.name}}</span>
         </div>
         <div class="team1-rating rating">
-          {{result.team1Rating.value}}
+          {{result.team1Rating}}
         </div>
-        <div class="team1-rating-change rating-change" data-ng-class="{'up': result.team1Rating.change > 0,
-            'down': result.team1Rating.change < 0}">
-          {{result.team1Rating.change > 0 ? '+' : ''}}{{result.team1Rating.change}}
+        <div class="team1-rating-change rating-change" data-ng-class="{'up': result.team1RatingChange > 0,
+            'down': result.team1RatingChange < 0}">
+          {{result.team1RatingChange > 0 ? '+' : ''}}{{result.team1RatingChange}}
         </div>
         <div class="result">
           {{result.team1Goals}}:{{result.team2Goals}} <span class="result-extra">{{result.resultExtra}}</span>
         </div>
-        <div class="team2-rating-change rating-change" data-ng-class="{'up': result.team2Rating.change > 0,
-          'down': result.team2Rating.change < 0}">
-          {{result.team2Rating.change > 0 ? '+' : ''}}{{result.team2Rating.change}}
+        <div class="team2-rating-change rating-change" data-ng-class="{'up': result.team2RatingChange > 0,
+          'down': result.team2RatingChange < 0}">
+          {{result.team2RatingChange > 0 ? '+' : ''}}{{result.team2RatingChange}}
         </div>
         <div class="team2-rating rating">
-          {{result.team2Rating.value}}
+          {{result.team2Rating}}
         </div>
-        <div class="team2-name" data-ng-class="{'winner': result.team2.id == result.winnerTeam.id}">
-          {{result.team2Info.name}} <img src="img/flags/{{result.team2Info.flag.code}}.png" class="flag" />
+        <div class="team2-info">
+          <span class="name" data-ng-class="{'winner': result.team2Info.team.id == result.winnerTeam.id}">{{result.team2Info.name}}</span>
+          <img src="img/flags/{{result.team2Info.flag.code}}.png" class="flag" />
+          <span class="rank" data-ng-class="{'up': result.team2RankChange > 0, 'down': result.team2RankChange < 0}">{{result.team2Rank ? result.team2Rank : '–'}}</span>
         </div>
       </div>
       <div class="additional-data">
         <div class="date">
-          {{result.date | date: 'd/M/yyyy'}}
+          <a ng-href="rankings/{{result.date | date: 'yyyy-MM-dd'}}">{{result.date | date: 'd/M/yyyy'}}</a>
         </div>
         <div class="venue">
           {{result.city.name}}, {{result.country.name}} <img src="img/flags/{{result.countryFlag.code}}.png" class="flag smaller" />
