Added date selection in ranking view

--- a/natrank-frontend/partial/rankings/rankings.less
+++ b/natrank-frontend/partial/rankings/rankings.less
@@ -16,6 +16,23 @@
   > #header {
     margin-top: 0;
     text-align: center;
+
+    > #date {
+      padding-left: 2px;
+
+      > #day {
+        width: 60px;
+        .text-right;
+      }
+
+      > #year {
+        width: 85px;
+      }
+
+      input, select {
+        padding: 4px;
+      }
+    }
   }
 
   > #ranking {
