--- a/natrank-frontend/partial/rankings/rankings.html
+++ b/natrank-frontend/partial/rankings/rankings.html
@@ -11,7 +11,18 @@
   -->
 
 <div id="ranking-container" data-ng-controller="RankingsCtrl">
-  <h3 id="header">World ranking for {{ranking.date | date: 'MMMM d, yyyy'}}</h3>
+  <h3 id="header">
+    World ranking for
+    <span id="date">
+      <input id="day" type="number" min="1" max="31" data-ng-model="day"
+             data-ng-model-options="{debounce: 500}" />
+      <select id="month" data-ng-model="month"
+              data-ng-options="selectedMonth.k as selectedMonth.v for selectedMonth in months">
+      </select>
+      <input id="year" type="number" min="1872" max="2014" data-ng-model="year"
+             data-ng-model-options="{debounce: 500}"/>
+    </span>
+  </h3>
   <table id="ranking">
     <thead>
       <tr>
