--- a/natrank-frontend/partial/rankings/rankings.less
+++ b/natrank-frontend/partial/rankings/rankings.less
@@ -10,6 +10,8 @@
  * Authored by: Piotr Grabowski <fau999@gmail.com>
  */
 
+@color-new: #F0AD4E;
+
 #ranking-container {
   .make-md-column(12);
 
@@ -48,13 +50,16 @@
     font-size: 15px;
     margin: 0 auto;
 
-    td {
-      vertical-align: middle !important;
-    }
-
     > thead, > tfoot {
+      font-size: 11px;
+      font-weight: bold;
+
       .team {
         .text-left;
+      }
+
+      .rank-change {
+        .text-center;
       }
 
       .rating {
@@ -68,11 +73,57 @@
         padding-right: 8px;
         font-size: 13px;
         font-weight: bold;
+        vertical-align: middle;
         .text-right;
       }
 
-      .team {
-        .text-left;
+      .rank.no-rank {
+        padding-right: 17px;
+      }
+
+      .team-flag {
+        .text-center;
+        padding-right: 0;
+        width: 25px;
+      }
+
+      .team-name > a {
+        vertical-align: -1px;
+      }
+
+      .rank-change {
+        width: 14%;
+        .text-center;
+
+        > .new, .value {
+          text-transform: uppercase;
+          font-weight: bold;
+        }
+
+        > .new {
+          background-color: @color-new;
+          color: #FFFFFF;
+          font-size: 10px;
+          padding: 4px;
+          border-radius: 2px;
+        }
+
+        .value {
+          font-size: 11px;
+          vertical-align: 1px;
+        }
+
+        > .up {
+          color: @color-up;
+        }
+
+        > .down {
+          color: @color-down;
+        }
+
+        .fa-minus {
+          font-size: 10px;
+        }
       }
 
       .rating {
@@ -85,6 +136,10 @@
 
   > #ranking.dynamic {
     width: 60%;
+  }
+
+  .fa {
+    vertical-align: middle;
   }
 
 }
