Added filtering by year in results view; improved url bar path updating in rankings view.

--- a/natrank-frontend/app.less
+++ b/natrank-frontend/app.less
@@ -44,6 +44,11 @@
   }
 }
 
+#header {
+  margin: 0 0 12px 0;
+  text-align: center;
+}
+
 #main-footer {
   color: #777777;
   border-top: 1px solid #E5E5E5;
