--- a/natrank-frontend/partial/rankings/rankings.less
+++ b/natrank-frontend/partial/rankings/rankings.less
@@ -126,6 +126,23 @@
         font-weight: bold;
         .text-center;
       }
+
+      .full {
+        vertical-align: middle;
+        font-size: 13px;
+      }
+
+      .positive {
+        color: @color-up;
+      }
+
+      .negative {
+        color: @color-down;
+      }
+    }
+
+    .full {
+      .text-center;
     }
   }
 
