--- a/natrank-frontend/app.less
+++ b/natrank-frontend/app.less
@@ -18,6 +18,8 @@
 /* Component LESS */
 @import "partial/results/results.less";
 @import "partial/rankings/rankings.less";
+@import "partial/team/team.less";
+@import "directive/resultList/resultList.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
